--- a/e_commerce/store/templates/home.html
+++ b/e_commerce/store/templates/home.html
@@ -1,22 +1,18 @@
-<!doctype html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>E-commerce</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
-  </head>
-  <body>
-    {% for product in product %}
-    <div class="card" style="width: 18rem;">
-        <img src="https://dummyimage.com/300x400/50fe00/fff" class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">{{product.name}}</h5>
-          <p class="card-text">{{product.price}}</p>
-          
+{% extends 'base.html' %}
+{% block content %}
+    <div class="container-fluid">
+        <div class="row nx-auto">
+            {% for product in product %}
+        
+            <div class="card nx-auto mb-3" style="width: 18rem;">
+                <img src="{{product.image.url}}" class="card-img-top" alt="...">
+                <div class="card-body">
+                <p class="card-title">{{product.name}}</p>
+                <p class="card-text">{{product.price}}</p>
+                </div>
+            </div>
+            {% endfor %}
         </div>
-      </div>
-        {% endfor %}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
-  </body>
-</html>
+    </div>
+
+{% endblock %}
