--- a/e_commerce/store/templates/home.html
+++ b/e_commerce/store/templates/home.html
@@ -1,18 +1,34 @@
-{% extends 'base.html' %}
+{% extends 'base.html' %} 
 {% block content %}
-    <div class="container-fluid">
-        <div class="row nx-auto">
-            {% for product in product %}
-        
-            <div class="card nx-auto mb-3" style="width: 18rem;">
-                <img src="{{product.image.url}}" class="card-img-top" alt="...">
-                <div class="card-body">
-                <p class="card-title">{{product.name}}</p>
-                <p class="card-text">{{product.price}}</p>
-                </div>
-            </div>
+<div class="container-fluid mt-3">
+  <div class="row">
+    <div class="col-lg-3">
+        <div class="list-group">
+            <a href="/" class="list-group-item list-group-item-action">All Product</a>
+            {% for category in category %}
+            <a href="/?category={{category.id}}" class="list-group-item list-group-item-action">{{category.name}}</a>
             {% endfor %}
         </div>
     </div>
+    <div id="product" class="col-lg-9">
+      <div class="row mx-auto">
+        {%for product in product %}
+        <div class="card mx-auto mb-3" style="width: 18rem">
+          <a href="{% url 'product-detail' product.id %}" class="btn">
+            <div class="item">
 
+            
+          <img src="{{product.image.url}}" class="card-img-top" alt="..." />
+        </div>
+        </a>
+          <div class="card-body">
+            <h4 class="card-title">{{product.name}}</h4>
+            <h6 class="card-text">{{product.price}} VND</h6>
+          </div>
+        </div>
+        {% endfor %}
+      </div>
+    </div>
+  </div>
+</div>
 {% endblock %}
