--- a/e_commerce/store/templates/base.html
+++ b/e_commerce/store/templates/base.html
@@ -1,7 +1,6 @@
-
+{% load static %}
 <!doctype html>
 <html lang="en">
-   {% load static %}
    <head>
       <!-- Required meta tags -->
       <meta charset="utf-8">
@@ -9,7 +8,7 @@
       <!-- Bootstrap CSS -->
       <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.1/dist/css/bootstrap.min.css">
       <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js"></script>    
-      <title>E-commerce|{% block title%}{%endblock title%}</title>
+      <title>E-commerce{% block title%}{%endblock title%}</title>
       <style>
          nav{
          background-color: white;
@@ -30,11 +29,12 @@
            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
            <span class="navbar-toggler-icon"></span>
         </button>
+        {% if request.session %}
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
            <ul class="navbar-nav mr-auto">
               <li class="nav-item active">
                  <a class="nav-link" href="/">
-                    <img src="{% static 'C:\Users\HieuB20DCCN242\Documents\e-commerce\e_commerce\store\static\images\Logo.png' %}"  style="height: 30px; margin-right: 10px;"> Home 
+                    <img src="{% static 'images/Logo.png' %}"  style="height: 30px; margin-right: 10px;"> Home 
                     <span class="sr-only"></span>
                  </a>
               </li>
@@ -46,24 +46,26 @@
             <ul class=" navbar-nav my-2 my-lg-0">
                <li class="nav-item active dropdown">
                   <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                  Praveen
+                     {{name}}
                   </a>
                   <div class="dropdown-menu" aria-labelledby="navbarDropdown">
                      <a class="dropdown-item" href="#">Orders</a>
-                     <a class="dropdown-item" href="#">Logout</a>
+                     <a class="dropdown-item" href="/logout">Logout</a>
                   </div>
                </li>
                <li class="nav-item active">
                   <a class="nav-link" href="#">Cart 
-                  <span class="badge bg-danger">4</span>
+                  <span class="badge bg-danger">{{totalitem}}</span>
                   <span class="sr-only">(current)</span></a>
                </li>
+               {%else%}
                <li class="nav-item active">
-                  <a class="nav-link" href="#">Login<span class="sr-only"></span></a>
+                  <a class="nav-link" href="/login">Login<span class="sr-only"></span></a>
                </li>
                <li class="nav-item active">
-                  <a class="nav-link text" href="#">Register<span class="sr-only"></span></a>
+                  <a  class="nav-link text" href="/signup">Signup<span class="sr-only"></span></a>
                </li>
+               {% endif %}
             </ul>
          </div>
       </nav>
